--- a/README
+++ b/README
@@ -7,3 +7,7 @@ React UI:
 https://react.semantic-ui.com/introduction
 http://javascriptplayground.com/blog/2016/07/css-modules-webpack-react/
 https://github.com/css-modules/webpack-demo
+
+
+Flexbox: 
+https://css-tricks.com/snippets/css/a-guide-to-flexbox/
