--- a/README
+++ b/README
@@ -7,9 +7,11 @@ https://react.semantic-ui.com/introduction
 http://javascriptplayground.com/blog/2016/07/css-modules-webpack-react/
 https://github.com/css-modules/webpack-demo
 
-
 Flexbox: 
 https://css-tricks.com/snippets/css/a-guide-to-flexbox/
 
 Moment.js
 https://momentjs.com/guides/
+
+Progress bar background:
+https://css-tricks.com/examples/ProgressBars/
