--- a/README
+++ b/README
@@ -17,3 +17,6 @@ Progress bar background:
 https://css-tricks.com/examples/ProgressBars/
 
 https://developmentarc.gitbooks.io/react-indepth/content/life_cycle/update/component_will_receive_props.html
+
+React testing:
+https://facebook.github.io/jest/docs/tutorial-react.html
